[package]
name = "pg_parquet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
# pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
# pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
# pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
# pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
# pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
arrow = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false}
arrow-schema = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false}
bytes = "1"
futures = "0.3"
object_store = {version = "0.10", default-features = false, features = ["aws"]}
parquet = {git = "https://github.com/aykut-bozkurt/arrow-rs.git", rev = "ba8cb48", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2",
    "lz4",
    "zstd",
    "object_store",
]}
pgrx = "=0.11.4"
serde = {version = "1", default-features = false}
serde_json = "1"
tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
