[package]
name = "pg_parquet"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg16"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
arrow = {version = "53", default-features = false}
arrow-schema = {version = "53", default-features = false}
futures = "0.3"
object_store = {version = "0.11", default-features = false, features = ["aws"]}
once_cell = "1"
parquet = {version = "53", default-features = false, features = [
    "arrow",
    "snap",
    "brotli",
    "flate2",
    "lz4",
    "zstd",
    "object_store",
]}
pgrx = "=0.11.4"
serde = {version = "1", default-features = false}
serde_json = "1"
tokio = {version = "1", default-features = false, features = ["rt", "time", "macros"]}

[dev-dependencies]
pgrx-tests = "=0.11.4"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
